--- a/config/data/parameter.properties
+++ b/config/data/parameter.properties
@@ -5,7 +5,6 @@ e_password=password
 account=648186030@qq.com
 password=123456
 e_loginSubmit=//input[@name='submit']
-e_productCenter=//a[text()='产品中心']
-e_callCenter=//a[text()='呼叫中心']
-e_freeUse=//input[@value='免费试用']
+e_outplan=//a[text()='小意机器人']
+e_freeUse=//input[@value='进入系统']
 titleName2=智能外呼中心
