--- a/config/data/parameter.properties
+++ b/config/data/parameter.properties
@@ -6,5 +6,17 @@ account=648186030@qq.com
 password=123456
 e_loginSubmit=//input[@name='submit']
 e_outplan=//a[text()='小意机器人']
+e_outplanModel=//ul[@class='ivu-menu']/li/span[text()='外呼计划']
 e_freeUse=//input[@value='进入系统']
 titleName2=智能外呼中心
+e_createPlan=//button[contains(text(),'新建外呼计划')]
+e_interactive=//a[text()='交互类']
+e_ivu-input=//input[@class='ivu-input']
+e_nextStep=//button[text()='下一步']
+e_ivu-select-placeholder=//span[@class='ivu-select-placeholder']
+e_ivu-select-item=//li[text()='%var%']
+e_uploadNum=//label[contains(text(),'上传号码')]
+e_ok=//button[@class='ivu-btn']/span[text()='知道了']
+e_backHome=//button[text()='返回我的外呼计划']
+e_deletePlan=//td[contains(text(),'%var%')]/parent::tr/td[10]/button[2]
+e_commit=//a[text()='确定']
