--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
-          <encoding>GBK</encoding>
+          <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
     </plugins>
